add swagger doc to responcecontroller
